# Futures-Bot-Research

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  whole_project_audit_review_124.md
src/futures_bot/: __init__.py
tests/property/: test_asset_amount_properties.py
tests/unit/: capability_freshness_fixtures.py  market_evidence_fixtures.py  replay_decision_market_fixtures.py  test_asset_conversion_domain.py  test_asset_conversion_policy.py  test_asset_semantics_domain.py  test_assets.py  test_bots.py  test_boundary_source_scans.py  test_broker.py  test_buckets.py  test_collateral_haircut_policy.py  test_collateral_valuation_domain.py  test_config_bundle.py  test_config_fingerprint.py  test_contract_asset_semantics.py  test_contract_asset_semantics_collateral_readiness.py  test_contract_asset_semantics_conversion_readiness.py  test_contract_asset_semantics_execution_cost_readiness.py  test_contract_asset_semantics_margin_liquidation_readiness.py  test_contract_asset_semantics_market_data_readiness.py  test_contract_asset_semantics_objective_readiness.py  test_cross_venue_exposure_semantics.py  test_cross_venue_market_frame.py  test_db_writer_consumed_record_integration.py  test_db_writer_service.py  test_decisions.py  test_evaluation_results.py  test_event_journal_domain.py  test_event_journal_policy.py  test_events.py  test_evidence.py  test_execution.py  test_execution_capability_gate.py  test_execution_capability_gate_domain.py  test_execution_capability_gate_freshness.py  test_execution_costs_domain.py  test_execution_costs_policy.py  (+148 more)
(+186 files in other folders)
