[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "futures-bot-research"
version = "0.1.0"
description = "Python-first research foundation for stablecoin-collateral futures bots."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
]

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pyright",
    "pytest",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/futures_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "E",
    "F",
    "I",
    "N",
    "PERF",
    "PL",
    "PTH",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
    "PLR2004",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
